--- a/css/style.css
+++ b/css/style.css
@@ -247,3 +247,64 @@ a {
 /* PORTFOLIO!!!! */
 
 /* Buttons (кнопки ul flex, center), на картинки внизу (display flex, justify-content:space-between). Выставить паддинги и маржины  */
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
+.filter-button-list {
+  display: flex;
+  justify-content: center;
+}
+
+.project {
+  padding: 94px 0;
+}
+
+.filter-button:hover {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.filter-button {
+  margin: 0 4px;
+  background: var(--background-team-color);
+  border-radius: 4px;
+  padding: 6px 22px;
+  border: none;
+}
+
+.filter-button {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 26px;
+}
+
+/* list of cells */
+
+.portfolio-name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06;
+  color: var(--title-text-color);
+  margin-left: 24px;
+}
+.portfolio-text {
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  margin-bottom: 20px;
+  margin-left: 24px;
+}
+.portfolio-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 30px 30px;
+}
+.portfolio-item {
+  margin-top: 30px;
+  border: 1px solid rgba(238, 238, 238, 1);
+}
