--- a/css/style.css
+++ b/css/style.css
@@ -289,14 +289,16 @@ a {
   line-height: 36px;
   letter-spacing: 0.06;
   color: var(--title-text-color);
-  margin-left: 24px;
+  padding: 0 24px;
+  text-align: left;
 }
 .portfolio-text {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
   margin-bottom: 20px;
-  margin-left: 24px;
+  padding: 0 24px;
+  text-align: left;
 }
 .portfolio-list {
   display: flex;
