--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ a {
   display: flex;
   color: var(--title-text-color);
   font-weight: 700;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
   text-transform: uppercase;
 }
 
@@ -209,7 +209,7 @@ a {
 }
 
 .our-team-block {
-  padding: 30px 60px;
+  padding: 30px 32px;
   text-align: center;
 }
 .team-name {
@@ -217,6 +217,7 @@ a {
   font-size: 16px;
   line-height: 19px;
   color: var(--title-text-color);
+  margin-bottom: 10px;
 }
 
 /* FOOTER */
@@ -260,7 +261,8 @@ a {
   padding: 94px 0;
 }
 
-.filter-button:hover {
+.filter-button:hover,
+.filter-button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -283,13 +285,16 @@ a {
 
 /* list of cells */
 
+.portfolio-unit {
+  padding: 20px 24px;
+}
+
 .portfolio-name {
   font-weight: 700;
   font-size: 18px;
   line-height: 36px;
   letter-spacing: 0.06;
   color: var(--title-text-color);
-  padding: 0 24px;
   text-align: left;
 }
 .portfolio-text {
@@ -297,16 +302,15 @@ a {
   line-height: 30px;
   letter-spacing: 0.03em;
   margin-bottom: 20px;
-  padding: 0 24px;
   text-align: left;
 }
 .portfolio-list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 30px 30px;
 }
 .portfolio-item {
   margin-top: 30px;
   border: 1px solid rgba(238, 238, 238, 1);
+  max-width: 370px;
 }
